postcss/testData/inspections/customSelectors/customSelectorWithInvalidTokenSlash.pcss
@custom-selector <error descr="';' expected"><error descr="unexpected token">/</error></error>